# yolov8_rknn

./: README.md  pt2rknn.sh
model/: changelog.md
onnx2rknn/: README.md  convert.py  resize_input.py
rknn_val/: CMakeLists.txt
rknn_val/runs/: draw.py  rknn_val_0906.txt  rknn_val_0919.txt  rknn_val_0926.txt
rknn_val/src/: detect.cc  postprocess.h  val.cc
ultralytics/: README.md  README.zh-CN.md  RKOPT_README.md  RKOPT_README.zh-CN.md
ultralytics/ultralytics/cfg/: default.yaml
ultralytics/ultralytics/data/: augment.py
ultralytics/ultralytics/engine/: exporter.py
ultralytics/ultralytics/nn/: autobackend.py
ultralytics/ultralytics/nn/modules/: head.py
yolo_train/: mydata.yaml  train.py
